--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name":        "hosted-hubot",
-  "version":     "2.2.0",
+  "version":     "2.4.8",
   "author":      "GitHub Inc.",
   "keywords":    "github hubot campfire bot",
   "description": "A simple helpful Robot for your Company",
@@ -15,10 +15,14 @@
   },
 
   "dependencies": {
-    "hubot": ">=2.2.1",
-    "hubot-scripts": ">=2.0.8",
-    "optparse": "1.0.3",
+    "hubot":         ">=2.4.8",
+    "hubot-scripts": ">= 2.4.1",
+    "optparse":      "1.0.3",
     "xml2js": ">=0.1.14"
+  },
+
+  "engines": {
+    "node": ">= 0.8.x",
+    "npm":  ">=1.1.x"
   }
 }
-
