Adds HipChat dependency and adapter config

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
 
   "dependencies": {
+    "hubot-hipchat": ">= 2.4.5",
     "hubot":         ">=2.4.8",
     "hubot-scripts": ">= 2.4.1",
     "optparse":      "1.0.3",
