--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "hubot":         ">=2.4.8",
     "hubot-scripts": ">= 2.4.1",
     "optparse":      "1.0.3",
-    "xml2js": ">=0.1.14"
+    "xml2js": ">=0.1.14",
+    "querystring": "0.1.0",
+    "scraper": "0.0.9",
+    "nodepie": "0.5.0",
+    "pypi": "0.1.2"
   },
 
   "engines": {
